--- a/Bibliography/bib_julia2.bib
+++ b/Bibliography/bib_julia2.bib
@@ -1728,7 +1728,6 @@
 	pages = {174--183},
 	number = {2}
 }
-
 @INPROCEEDINGS{HS07,
 	author = {Hoegner, L. and Stilla, U.},
 	title = {Texture extraction for building models from {IR} sequences of urban
@@ -1977,7 +1976,6 @@
 	year = {1999},
 	address = {Brisbane, Australia}
 }
-
 @INPROCEEDINGS{Kimura2004,
 	author = {Kimura, H. and Mizuno, T. and Papathanassiou, K.P. and Hajnsek, I.},
 	title = {Improvement of polarimetric {SAR} calibration based on the {Q}uegan
@@ -2209,7 +2207,6 @@
 	address = {Toronto, Canada},
 	month = {June}
 }
-
 @INPROCEEDINGS{luccasantos,
 	author = {E. V. Lucca and Freitas, C. C. and Frery, A. C. and Sant'Anna,
 	S. J.},
@@ -2297,7 +2294,6 @@
 	pages = {79--106},
 	number = {2}
 }
-
 @ARTICLE{Mandelbrot68,
 	author = {B. Mandelbrot and J. van Ness},
 	title = {Fractional Brownian Motion, fractional noises and applications.},
@@ -2591,7 +2587,6 @@
 	volume = {4},
 	pages = {167--177}
 }
-
 @ARTICLE{oliver91,
 	author = {C. Oliver},
 	title = {Information from {SAR} images},
@@ -4122,7 +4117,6 @@
 	month = {13-16 Nov.},
 	doi = {10.1109/ICIP.1994.413399}
 }
-
 @ARTICLE{Sheather2004,
 	author = {Sheather, S.},
 	title = {Density estimation},
@@ -4457,7 +4451,6 @@
 	doi={10.1109/JSTARS.2012.2202557},
 	ISSN={1939-1404},
 	month={Aug},}
-
 @ARTICLE{Cui2014,
 	author={S. Cui and G. Schwarz and M. Datcu},
 	journal={IEEE Geoscience and Remote Sensing Letters},
@@ -4470,7 +4463,6 @@
 	doi={10.1109/LGRS.2014.2307952},
 	ISSN={1545-598X},
 	month={Oct},}
-
 @article{cao1995minimum,
 	title={Minimum distance density-based estimation},
 	author={Cao, R. and Cuevas, A. and Fraiman, R.},
@@ -4593,8 +4585,6 @@
 	volume = {30},
 	year = {1968}
 }
-
-
 @article{Vijay2011,
 	author = {Kumar, V. and Venkataraman, G.},
 	title = {{SAR} interferometric coherence analysis for snow cover mapping in the western Himalayan region},
@@ -4814,7 +4804,6 @@
 	year={1993},
 	abstract={This paper analyses various estimators for characterizing synthetic aperture radar clutter textures. First, we consider maximum likelihood estimators, which require specific knowledge of the form of the probability distribution of the data but would be expected to yield the best performance. Both K- and Weibull-distributed clutter models, which are often applied to characterize natural SAR clutter, are considered. Though a full maximum likelihood solution is impossible for the K distribution, we derive an approximate one for the multi-look case. We next derive expressions for limiting errors in a variety of direct texture estimators and compare their predicted performance with the maximum likelihood estimates in a search for robust, optimum texture estimators.}
 }
-
 @ARTICLE{Li2011,
 	author={H. C. Li and W. Hong and Y. R. Wu and P. Z. Fan},
 	journal={IEEE Journal of Selected Topics in Signal Processing},
@@ -4827,7 +4816,6 @@
 	doi={10.1109/JSTSP.2011.2138675},
 	ISSN={1932-4553},
 	month={June},}
-
 @ARTICLE{Planinsic2018,
 	author={P. Planinšič and D. Gleich},
 	journal={IEEE Geoscience and Remote Sensing Letters},
@@ -4840,7 +4828,6 @@
 	doi={10.1109/LGRS.2017.2786344},
 	ISSN={1545-598X},
 	month={Feb},}
-
 @article{Beran1977,
 	author = "Beran, R.",
 	doi = "10.1214/aos/1176343842",
@@ -4890,14 +4877,12 @@
 	http://amstat.tandfonline.com/doi/pdf/10.1080/01621459.1981.10477701
 	}	
 }
-
 @BOOK{KullbackBook1968,
 	title = {Information Theory and Statistics},
 	publisher = {Dover Publications},
 	year = {1968},
 	author = {Kullback, S.}
 }
-
 @article{Parr1980,
 	author = { W. C.   Parr  and  W R.   Schucany },
 	title = {Minimum Distance and Robust Estimation},
@@ -4911,7 +4896,6 @@
 	eprint = { 
 	http://amstat.tandfonline.com/doi/pdf/10.1080/01621459.1980.10477522}	
 }
-
 @INPROCEEDINGS{Chan2017,
 	author={D. {Chan} and A. {Rey} and J. {Gambini} and J. {Cassetti} and A. C. {Frery}},
 	booktitle={2017 IEEE International Geoscience and Remote Sensing Symposium (IGARSS)},
@@ -4924,7 +4908,6 @@
 	doi={10.1109/IGARSS.2017.8127630},
 	ISSN={2153-7003},
 	month={July},}
-
 @book{abramowitz1964,
 	title={Handbook of Mathematical Functions: With Formulas, Graphs, and Mathematical Tables},
 	author={Abramowitz, M. and Stegun, I.A.},
@@ -5135,7 +5118,6 @@
 	publisher = {Taylor & Francis},
 	doi = {10.1080/00949659108811342}
 }
-
 @article{Byrd1995,
 	title = {A limited memory algorithm for bound constrained optimization},
 	abstract = "An algorithm for solving large nonlinear optimization problems with simple bounds is described. It is based on the gradient projection method and uses a limited memory BFGS matrix to approximate the Hessian of the objective function. It is shown how to take advantage of the form of the limited memory approximation to implement the algorithm efficiently. The results of numerical tests on a set of large problems are reported.",
@@ -5266,7 +5248,6 @@
 	doi={10.1109/MGRS.2013.2277512},
 	ISSN={},
 	month={Sep.},}
-
 @Article{Yahya2014,
 	AUTHOR = {Yahya, N. and Kamel, NS. and Malik, AS.},
 	TITLE = {Subspace-based Technique for Speckle Noise Reduction in Ultrasound Images},
@@ -5365,7 +5346,6 @@
 	doi={10.1109/IGARSS.2016.7729845},
 	ISSN={},
 	month={July},}
-
 @article{Adelson1984,
 	title={Pyramid methods in image processing},
 	author={Adelson, E. and Anderson, Ch. and Bergen, J. and Burt, P. and Ogden, J.},
@@ -5375,7 +5355,6 @@
 	pages={33--41},
 	year={1984}
 }
-
 @article{scheffe1947,
 	author = "Scheff\'e, H.",
 	doi = "10.1214/aoms/1177730390",
@@ -5420,7 +5399,6 @@
 	}
 	
 }
-
 @ARTICLE{Santos2017,  
 	author={C. A. Santos and D. L. Martins and N. D. Mascarenhas},  
 	journal={IEEE Transactions on Image Processing},   
@@ -5429,7 +5407,6 @@
 	volume={26},  
 	number={6},  
 	pages={2632-2643},}
-
 @inproceedings{Penna2013,
 	title={Intensity {SAR} Image Denoising with Stochastic Distances Using Non-Local Means Filter},
 	author={P. A. Penna and N. D. Mascarenhas},
@@ -5440,7 +5417,6 @@
 	address = {Arequipa, Peru},
 	url = {http://www.ucsp.edu.pe/sibgrapi2013/eproceedings/}
 }
-
 @ARTICLE{Penna2019,
 	author={Penna, P. and Mascarenhas, N.},
 	journal={IEEE Transactions on Geoscience and Remote Sensing},
@@ -5453,7 +5429,6 @@
 	doi={10.1109/TGRS.2019.2912153},
 	ISSN={1558-0644},
 	month={Sep.},}
-
 @Article{Carvalho2019,
 	AUTHOR = {Carvalho, N. and Sant'Anna Bins, L. and S. J. Sant'Anna},
 	TITLE = {Analysis of Stochastic Distances and {W}ishart Mixture Models Applied on {PolSAR} Images},
@@ -5480,7 +5455,6 @@
 	ISSN={1558-0571},
 	month={},
 }
-
 @article{kokonendji2018,
   author  = {C. Kokonendji and F. {Libengu\'e Dob\'el\'e-Kpoka}},
 journal = {African Diaspora Journal of Mathematics},
@@ -5492,7 +5466,6 @@ pages   = {87--97},
 volume  = {1},
 url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 }
-
 @Article{Monserrat2014,
 	author    = {O. Monserrat and M. Crosetto and G. Luzi},
 	journal   = {{ISPRS} Journal of Photogrammetry and Remote Sensing},
@@ -5513,7 +5486,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	doi       = {10.1007/s40815-019-00654-6},
 	publisher = {Springer Science and Business Media {LLC}},
 }
-
 @article{SamplingfromtheGI0Distribution2018,
 	Author = {D. Chan and A. Rey and J. Gambini and A. C. Frery},
 	Doi = {https://doi.org/10.1515/mcma-2018-2023},
@@ -5525,7 +5497,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	Year = {2018},
 	doi = {10.1515/mcma-2018-2023},
 }
-
 @Article{salicruetal1993,
 	Title                    = {Asymptotic Distribution of ($h,\phi$)-Entropy},
 	Author                   = {Salicr\'u, M. and Mend\'endez, M. L. and Pardo, L.},
@@ -5535,8 +5506,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	Year                     = {1993},
 	Number                   = {7},
 }
-
-
 @Article{White1991,
 	author = { R. G. White },
 	title = {Change detection in {SAR} imagery},
@@ -5548,7 +5517,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	publisher = {Taylor & Francis},
 	doi = {10.1080/01431169108929656},
 }
-
 @Article{Menendez1997,
 	author  = {M. L. Men\'endez and D. Morales and L. Pardo and M. Salicr\'u},
 	journal = {Applications of Mathematics},
@@ -5558,7 +5526,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	year    = {1997},
 	number  = {2},
 }
-
 @book{Michalowicz2018,
 	author = {Michalowicz, J. and Nichols, J. and Bucholtz, F.},
 	year = {2018},
@@ -5567,7 +5534,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	publisher= {Chapman and Hall/CRC },
 	isbn = {9781138374799}
 }
-
 @article{Wu1997,
 	title = "A Cross-Validation Bandwidth Choice for Kernel Density Estimates with Selection Biased Data",
 	journal = "Journal of Multivariate Analysis",
@@ -5580,8 +5546,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	url = "http://www.sciencedirect.com/science/article/pii/S0047259X97916596",
 	author = "Wu, C.",
 }
-
-
 @Article{AGeneralizedGaussianCoherentScattererModelforCorrelatedSARTexture,
 	author  = {D.-X. Yue and F. Xu and A. C. Frery and Y.-Q. Jin},
 	journal = {IEEE Transactions on Geoscience and Remote Sensing},
@@ -5594,8 +5558,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	doi     = {10.1109/TGRS.2019.2958125},
 	groups  = {Journal Article},
 }
-
-
 @Article{PolarimetricSegmentationBSplinesMSSP,
 	author     = {A. C. Frery and Jacobo-Berlles, J. and Gambini, J. and Mejail, M.},
 	journal    = {Multidimensional Systems and Signal Processing},
@@ -5609,14 +5571,12 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	doi        = {10.1007/s11045-010-0113-4},
 	groups     = {Journal Article},
 }
-
 @ARTICLE{Cassetti2020,
 	author = {Cassetti, J. and Frery, A. C. },
 	title = {An Improved Minimum-Distance Texture Estimator for Speckled Data under the $\mathcal{G}^0$ Model},
 	journal = {Artículo enviado para su publicación},
 	year = {2020}
 }
-
 @ARTICLE{Akbarizadeh2012,  
 	author={G. {Akbarizadeh}},  
 	journal={IEEE Transactions on Geoscience and Remote Sensing},   
@@ -5626,7 +5586,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	number={11},  
 	pages={4358-4368}
 }
-
 @article{Palacio2019,
 	author = {M. G. Palacio and S. B. Ferrero and A. C. Frery},
 	title = {Revisiting the effect of spatial resolution on information content based on classification results},
@@ -5640,7 +5599,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	URL = { https://doi.org/10.1080/01431161.2019.1569278},
 	eprint = { 	https://doi.org/10.1080/01431161.2019.1569278},
 }
-
 @article{Zhang2019,
 	author = {A. Zhang and X. Yang and L. Jia and J. Ai and Z. Dong},
 	title = {{SAR} image classification using adaptive neighborhood-based convolutional neural network},
@@ -5654,7 +5612,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	URL = { https://doi.org/10.1080/22797254.2019.1579616},
 	eprint = { 	https://doi.org/10.1080/22797254.2019.1579616}
 }
-
 @article{Parikh2020,
 	author = { H. Parikh  and  S. Patel  and  V. Patel },
 	title = {Classification of {SAR} and {P}ol{S}AR images using deep learning: a review},
@@ -5668,7 +5625,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	URL = {	https://doi.org/10.1080/19479832.2019.1655489},
 	eprint = { 	https://doi.org/10.1080/19479832.2019.1655489}	
 }
-
 @ARTICLE{Fernandez2017,
 	author={J. I. Fernández-Michelli and M. Hurtado and J. A. Areta and C. H. Muravchik},
 	journal={IEEE Geoscience and Remote Sensing Letters}, 
@@ -5677,7 +5633,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	volume={14},
 	number={5},
 	pages={754-758}}
-
 @article{Ebrahimi94,
 	title = {Two measures of sample entropy},
 	journal = {Statistics \& Probability Letters},
@@ -5690,7 +5645,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	url = {https://www.sciencedirect.com/science/article/pii/0167715294900469},
 	author = {N. Ebrahimi and K. Pflughoeft and E. S. Soofi}
 }
-
 @ARTICLE{Ferreira2020,
 	author={J. Ferreira and Nascimento, A. D.},
 	journal={IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing}, 
@@ -5699,7 +5653,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	volume={13},
 	number={},
 	pages={2547-2553}}
-
 @ARTICLE{Frery2012,	
 	author={A. C. Frery and R. J. Cintra and A. D. Nascimento},	
 	journal={IEEE Transactions on Geoscience and Remote Sensing}, 	
@@ -5708,8 +5661,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	volume={51},	
 	number={6},	
 	pages={3733-3743},}
-
-@article{AlOmari2013,
+@article{AlOmari2016,
 	author = {A. I. Al-Omari},
 	title = {A new measure of entropy of continuous random variable},
 	journal = {Journal of Statistical Theory and Practice},
@@ -5723,7 +5675,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	eprint = { 	https://doi.org/10.1080/15598608.2016.1217444}
 	
 }
-
 @article{Beirlant1997,
 	title={Nonparametric entropy estimation. An overview},
 	author={J. Beirlant and E. J. Dudewicz and L. Gy{\"o}rfi and I. Denes},
@@ -5733,7 +5684,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	pages={17-39},	
 	year={1997}
 }
-
 @INPROCEEDINGS{Behmardi2011,  
 	author={B. Behmardi and R. Raich and A. O. Hero},  
 	booktitle={2011 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},   
@@ -5742,7 +5692,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	volume={},  
 	number={},  
 	pages={2008-2011},}
-
 @article{Buades2005,
 	author = {Buades, A. and Coll, B. and Morel, J. M.},
 	title = {A Review of Image Denoising Algorithms, with a New One},
@@ -5759,7 +5708,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 		https://doi.org/10.1137/040616024
 	}
 }
-
 @inproceedings{Puig2003,
 	author    = {D. Puig and M. A. Garc\'ia},
 	title     = {Pixel classification through divergence-based integration of texture methods with conflict resolution},
@@ -5774,7 +5722,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	biburl    = {https://dblp.org/rec/conf/icip/PuigG03.bib},
 	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
-
 @ARTICLE{Schou2003,
 	author={J. Schou and H. Skriver and A. A. Nielse and K. Conradsen},
 	journal={IEEE Transactions on Geoscience and Remote Sensing}, 
@@ -5786,7 +5733,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	doi={10.1109/TGRS.2002.808063},
 	ISSN={1558-0644},
 	month={Jan},}
-
 @ARTICLE{Frery2019,
 	author={Frery, A. C.},
 	journal={Journal of Radars}, 
@@ -5796,7 +5742,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	number={6},
 	pages={758-781},
 	doi={ 10.12000/JR19108}}
-
 @ARTICLE{Deledalle2009,  
 	author={C. Deledalle and L. Denis and F. Tupin},  
 	journal={IEEE Transactions on Image Processing},   
@@ -5805,7 +5750,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	volume={18},  
 	number={12},  
 	pages={2661-2672},}
-
 @article{Buades2010,
 	title={Image Denoising Methods. A New Nonlocal Principle},
 	author={A. Buades and B. Coll and J. M. Morel},
@@ -5814,7 +5758,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	volume={52},
 	pages={113-147}
 }
-
 @ARTICLE{Xue2013,	
 	author={B. Xue and Y. Huang and J. Yang and L. Shi and Y. Zhan and X. Cao},	
 	journal={IEEE Geoscience and Remote Sensing Letters}, 	
@@ -5823,7 +5766,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	volume={10},	
 	number={6},	
 	pages={1309-1313},}
-
 @ARTICLE{Zhang2011,  
 	author={W. G. Zhang and Q. Zhang},  
 	journal={Electronics Letters},   
@@ -5832,7 +5774,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	volume={47},  
 	number={12},  
 	pages={724 -725},}
-
 @ARTICLE{Rodrigues2016,
 	author={F. A. {\'A}vila Rodrigues and J. F. Rocha Neto and R. C. Pinheiro Marques and F. N. Sombra de Medeiros and J. Santos Nobre},
 	journal={IEEE Geoscience and Remote Sensing Letters}, 
@@ -5841,7 +5782,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	volume={13},
 	number={2},
 	pages={132-136},}
-
 @article{Torres2013,
 	title={{SAR} Image Despeckling Algorithms using Stochastic Distances and Nonlocal Means},
 	author={L. Torres and A. C. Frery},
@@ -5849,7 +5789,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	year={2013},
 	volume={abs/1308.4338}
 }
-
 @InProceedings{Torres2012,
 	author={Torres, L.	and Cavalcante, T. and Frery, A. C.},
 	editor={Alvarez, L. and Mejail, M. and Gomez, L. and Jacobo, J.},
@@ -5861,7 +5800,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	pages={632--639},
 	isbn={978-3-642-33275-3}
 }
-
 @ARTICLE{Nobre2016,  
 	author={R. H. Nobre and F. A. A. Rodrigues and R. C. P. Marques and J. S. Nobre and J. F. S. R. Neto and F. N. S. Medeiros},  
 	journal={IEEE Signal Processing Letters},   
@@ -5870,7 +5808,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	volume={23},  
 	number={11},  
 	pages={1551-1555},}
-
 @ARTICLE{kasischke1997,  
 title = {The use of imaging radars for ecological applications{ - A} review},
 journal = {Remote Sensing of Environment},
@@ -5884,7 +5821,6 @@ doi = {https://doi.org/10.1016/S0034-4257(96)00148-4},
 url = {https://www.sciencedirect.com/science/article/pii/S0034425796001484},
 author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 }
-
 @Book{Chen20015,
 	author = {Chen, Kun{-}Shan},
 	year = {2015},
@@ -5895,7 +5831,6 @@ author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 	journal = {Principles of Synthetic Aperture Radar Imaging: A System Simulation Approach},
 	doi = {10.1201/b19057}
 }
-
 @article{Lee1981,
 	title = {Speckle analysis and smoothing of synthetic aperture radar images},
 	journal = {Computer Graphics and Image Processing},
@@ -5908,7 +5843,6 @@ author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 	url = {https://www.sciencedirect.com/science/article/pii/S0146664X81800056},
 	author = {J. Lee},
 }
-
 @article{Correa95,
 	author = { J. C.   Correa },
 	title = {A new estimator of entropy},
@@ -5930,7 +5864,6 @@ author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 	}
 	
 }
-
 @article{Vasicek76,
 	ISSN = {00359246},
 	URL = {http://www.jstor.org/stable/2984828},
@@ -5943,7 +5876,6 @@ author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 	volume = {38},
 	year = {1976}
 }
-
 @article{VanEs92,
 	ISSN = {03036898, 14679469},
 	URL = {http://www.jstor.org/stable/4616225},
@@ -5957,7 +5889,6 @@ author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 	volume = {19},
 	year = {1992}
 }
-
 @article{Noughabi13,
 	author = { H. A. Noughabi  and  R. A. Noughabi },
 	title = {On the entropy estimators},
@@ -5979,7 +5910,6 @@ author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 	}
 	
 }
-
 @book{CaseBerg01,
 	author = {Casella, G. and Berger, R.},
 	biburl = {https://www.bibsonomy.org/bibtex/21597678f36e23439610affbf46adec1c/jwbowers},
@@ -5999,5 +5929,16 @@ author = {E. S. Kasischke and J. M Melack and M. {Craig Dobson}},
 	year = 2001
 }
 
-
-
+@article{AlOmari2014,
+	title = {Estimation of entropy using random sampling},
+	journal = {Journal of Computational and Applied Mathematics},
+	volume = {261},
+	pages = {95-102},
+	year = {2014},
+	issn = {0377-0427},
+	doi = {https://doi.org/10.1016/j.cam.2013.10.047},
+	url = {https://www.sciencedirect.com/science/article/pii/S0377042713006006},
+	author = {A. I. Al-Omari},
+	keywords = {Entropy, Root mean square error, Simple random sampling, Ranked set sampling, Double ranked set sampling},
+	abstract = {In this paper, three new entropy estimators of continuous random variables are proposed using simple random sampling (SRS), ranked set sampling (RSS) and double ranked set sampling (DRSS) techniques. The new estimators are obtained by modifying the estimators suggested by Noughabi and Arghami (2010) and Ebrahim et al. (1994). In terms of the root mean square error (RMSEs) and bias values, a numerical comparison is considered to compare the suggested estimators with Vasicek’s (1976) estimator. Our results reveal that the suggested estimators have smaller mean squared error than Vasicek’s estimator. Also, the suggested estimators under double ranked set sampling are more efficient than other suggested estimators based on SRS and RSS.}
+}
