--- a/Source/Conference/CISS2021/CassettiDelgadinoFrery.tex
+++ b/Source/Conference/CISS2021/CassettiDelgadinoFrery.tex
@@ -21,7 +21,8 @@
 
 \begin{document}
 
-\title{SAR image classification using non parametric estimators of Shannon entropy}
+%\title{SAR image classification using non parametric estimators of Shannon entropy}
+\title{A new classification proposal based on Shannon entropy for monopolarimetric SAR images}
 \author{ Julia~Cassetti, Daiana Delgadino, and Alejandro~C.~Frery,~\IEEEmembership{Senior Member}
 
 %\thanks{This work was supported by Secretar\'ia de Pol\'iticas Universitarias (SPU), CNPq, and Fapeal.}
@@ -77,7 +78,7 @@ Therefore, its estimation deserves attention.
 Vasicek~\cite{Vasicek76} replaced the distribution function $F$ by the empirical distribution function $F_n$ and used a difference operator in place of the differential operator in the Shannon's entropy expression. 
 Van Es~\cite{VanEs92} studied an entropy estimator based on differences between order statistics. 
 Correa~\cite{Correa95} proposed a new entropy estimator based on local linear regression.
-Al-Omari~\cite{AlOmari2013} and Noughabi and Noughabi~\cite{Noughabi13} presented modified versions of the Ebrahimi et al.~\cite{Ebrahimi94} estimator.
+Al-Omari~\cite{AlOmari2016} and Noughabi and Noughabi~\cite{Noughabi13} presented modified versions of the Ebrahimi et al.~\cite{Ebrahimi94} estimator.
 
 In this paper, we address the classification problem through supervised and unsupervised strategies whose input is the local estimate of the entropy. 
 To this aim, we will evaluate estimators of the entropy, both parametric and non-parametric. 
@@ -133,17 +134,17 @@ In this regard Shanon's entropy (SE) is defined as
 where $X$ is a continuous random variable with probability density function (pdf) $f(x)$ and
 cumulative distribution function (cdf) $F(x)$. 
 
-Using~\eqref{eq:CDFG0} it can be obtained an expression of the~$\mathcal{G}^0$ distribution. By calling ($\text{E}_{\text{F}}$) to the Fisher entropy then the $\mathcal{G}^0$ entropy for intensity data ($\text{E}_{\text{G0}}$) is given by
+Using~\eqref{eq:CDFG0} it can be obtained an expression of the~$\mathcal{G}^0$ distribution. By calling ($\text{H}_{\text{F}}$) to the Fisher entropy then the $\mathcal{G}^0$ entropy for intensity data ($\text{H}_{\text{G0}}$) is given by
 \begin{align}
 	\label{EntropiaFisherGi0}
-	\text{E}_{\text{G0}}(\alpha,\gamma,L)=\text{E}_{\text{F}}(2 L, - 2 \alpha) -\log(-\dfrac{\alpha}{\gamma}).
+	\text{H}_{\text{G0}}(\alpha,\gamma,L)=\text{H}_{\text{F}}(2 L, - 2 \alpha) -\log(-\dfrac{\alpha}{\gamma}).
 \end{align}
-Using~\eqref{EntropiaFisherGi0}, an 
+Using~\eqref{EntropiaFisherGi0}, the
 %%% Por qué "an"? Hay otras? Revisar todo.
-expression of $\text{E}_{\text{G0}}$ is
+expression of $\text{H}_{\text{G0}}$ is
 \begin{align}
 	\label{EG0}
-	\text{E}_{\text{G0}}(\alpha,\gamma,L)&=-\log \Big(-\frac{\alpha }{\gamma }\Big)-(1-\alpha ) \psi^{(0)}(-\alpha )\\ \nonumber
+	\text{H}_{\text{G0}}(\alpha,\gamma,L)&=-\log \Big(-\frac{\alpha }{\gamma }\Big)-(1-\alpha ) \psi^{(0)}(-\alpha )\\ \nonumber
 	&+\log \Big(-\frac{\alpha }{L}\Big)+\frac{1}{2} (2 L-2 \alpha ) \psi ^{(0)}\Big(\frac{1}{2} (2 L-2 \alpha )\Big)\\ \nonumber
 	&+\log \big(B(L,-\alpha )\big)+(1-L) \psi^{(0)}(L),
 \end{align}
@@ -155,7 +156,7 @@ where $\psi^{(0)}$ and $B$ are the digamma and beta functions, respectively.
 Several authors have proposed entropy estimators according to~\eqref{SE}.
 Most of them are based on order statistics of the sample. 
 
-Al-Omari~\cite{AlOmari2013} presented an overview of these estimators an also proposed a new one. 
+Al-Omari~\cite{AlOmari2016} presented an overview of these estimators and also proposed a new one. 
 From a parametric point of view, is natural to consider the maximum likelihood estimator (MV) of the entropy (HMV).
 
 In this paper we study the following entropy estimators.
@@ -175,7 +176,7 @@ A maximum likelihood estimator of $\alpha$ and $\gamma$ for $L$ known, denoted $
 \end{align}
 The MV entropy estimator (HMV)~\cite{CaseBerg01} is, thus,
 \begin{align}
-	\text{HMV}=\text{E}_{\text{G0}}(\hat{\alpha}_{\text{MV}},\hat{\gamma}_{\text{MV}},L).
+	\text{HMV}=\text{H}_{\text{G0}}(\hat{\alpha}_{\text{MV}},\hat{\gamma}_{\text{MV}},L).
 \end{align}
 Its calculation demands numerical maximization routines; we used the L-BFGS-B version of the Broyden-Fletcher-Goldfarb-Shanno (BFGS) method~\cite{Luenberger2008} that allows box constraints.
 This algorithm belongs to the family of quasi-Newton methods. 
@@ -189,31 +190,31 @@ The characteristic of these methods is that they do not require the Hessian matr
 \subsection{Non parametric entropy estimator}
 \label{nonpar}
 
-In these subsection we present the non parametric entropy estimator studies which were presented in~\cite{AlOmari2013}. In all of them we consider that $X_1,\ldots,X_n$ be a random sample from the distribution function $F(x)$ and $X_{(i)}$ the order statistics. We also studied the HMV estimator.
+In these subsection we present the non parametric entropy estimator studies which were presented in~\cite{AlOmari2016}. In all of them we consider that $X_1,\ldots,X_n$ be a random sample from the distribution function $F(x)$ and $X_{(i)}$ the order statistics. We also studied the HMV estimator.
 In the following we present the expression of the studied estimators. 
 %It should be noted that most of the estimators studied in this work 
 %%% ACF m y n van en modo matemático
 %%% ACF citar los artículos originales
 \begin{itemize}
-	\item Vasicek:
+	\item Vasicek~\cite{Vasicek76}:
 	 \begin{align}
 	 	\label{HV}
 		\text{HV}_\text{{mn}}=\frac{1}{n} \sum_{i=1}^{n} \log \Big[\frac{n}{2 m}\left(X_{(i+m)}-X_{(i-m)}\right)\Big].
 	\end{align}
 %%% ACF Qué es m?
-	\item Van Es:
+	\item Van Es~\cite{VanEs92}:
 	\begin{align}
 		\label{HVE}
 		\text{HVE}_\text{{mn}}&=\frac{1}{n-m} \sum_{i=1}^{n-m}\Big[\frac{n+1}{m}\left(X_{(i+m)}-X_{(i)}\right)\Big] \nonumber\\
 		        &+\sum_{k=m}^{n} \frac{1}{k}+\log \frac{m}{n+1}.
 	\end{align}
-	\item Correa:
+	\item Correa~\cite{Correa95}:
 	\begin{align}
 		\label{HC}
 		\text{HC}_\text{{mn}}=-\frac{1}{n} \sum_{i=1}^{n} \log \frac{\sum_{j=i-m}^{i+m}(j-i)\left(X_{(j)}-\bar{X}_{(i)}\right)}{n \sum_{j=i-m}^{i+m}\left(X_{(j)}-\bar{X}_{(i)}\right)^{2}},
 	\end{align}
 where $\bar{X}_{(i)}=\frac{1}{2 m+1} \sum_{j=i-m}^{i+m} X_{(j)}$.
-	\item Al-Omari:
+	\item Al-Omari~\cite{AlOmari2014}:
 	\begin{align}
 	\text{AHE}_\text{{mn}}=\frac{1}{n} \sum_{i=1}^{n} \log \Big[\frac{n}{\omega_{i} m}\left(X_{(i+m)}-X_{(i-m)}\right)\Big], 
 		\label{AHE}
@@ -227,7 +228,7 @@ where $\bar{X}_{(i)}=\frac{1}{2 m+1} \sum_{j=i-m}^{i+m} X_{(j)}$.
 				\end{cases}
 	\end{equation*}
 	in which $X_{(i-m)}=X_{(1)}$ for $i \leq m$, and $X_{(i+m)}=X_{(n)}$ for $i \geq n-m$.
-	\item Ebrahimi
+	\item Ebrahimi~\cite{Ebrahimi94}
 	\begin{align}
 	\text{HE}_\text{{mn}}=\frac{1}{n} \sum_{i=1}^{n} \log \Big[\frac{n}{\tau_{i} m}\left(X_{(i+m)}-X_{(i-m)}\right)\Big],
 		\label{HE}
@@ -240,7 +241,7 @@ where $\bar{X}_{(i)}=\frac{1}{2 m+1} \sum_{j=i-m}^{i+m} X_{(j)}$.
 		1+\frac{n-i}{m} & \text{ if } n-m+1 \leq i \leq n.
 			\end{cases}
 	\end{equation*}
-	\item Al-Omari alternative proposal:
+	\item Al-Omari alternative proposal~\cite{AlOmari2016}:
 	\label{MH}
 	\begin{align}
 	\text{MH}_\text{{mn}}=\frac{1}{n} \sum_{i=1}^{n} \log \Big[\frac{n}{v_{i} m}\left(X_{(i+m)}-X_{(i-m)}\right)\Big],
@@ -264,7 +265,7 @@ For this study we generated $500$ samples from a $\mathcal{G}^0$ distribution of
 The sample sizes represent different scenarios of window sizes. 
 
 We then assessed these estimators in the frame of supervised classification by applying SVM, and of unsupervised classification using k-means. 
-We generated simulated images for several values of $\alpha$ and $\gamma$, and used sliding windows of different sizes to generate an entropy map. 
+We generated simulated images for several values of $\alpha$ and $\gamma$, and used sliding windows of different sizes to generate the entropy map. 
 The classification was performed using these maps as features. 
 The classification methods are evaluated using Kappa and overall accuracy. 
 The parameter estimation methods were tested in an actual SAR image. 
@@ -289,5 +290,3 @@ All studies were made in the \texttt R platform and language for statistical com
 
 
 \end{document}
-
-
